# polarbear

./: AUTHORS  Makefile.am  Makefile.in  README.adoc  aclocal.m4  configure  configure.in  mkinstalldirs
debian/: Makefile.in  changelog  control  copyright  docs  rules
doc/: Makefile.am  Makefile.in  polarbear.1  polarbear.1bakbak
doc/images/: Makefile.am  Makefile.in
src/: AmplitudeResponse.cxx  AmplitudeResponse.hxx  CoefArray.hxx  Complex.cxx  Complex.hxx  ComplexArray.hxx  ComplexExt.hxx  ComplexExtArray.cxx  ComplexExtArray.hxx  Defines.hxx  EMode.hxx  Filter.hxx  Makefile.am  Makefile.in  PhaseResponse.cxx  PhaseResponse.hxx  Polar.cxx  Polar.hxx  PoleZeroEditor.cxx  PoleZeroEditorGUI-1_0.cxx  PoleZeroEditorGUI-1_1.cxx  PoleZeroEditorGUI.cxx  PoleZeroEditorGUI.fl  PoleZeroEditorGUI.hxx  PoleZeroList.cxx  PoleZeroList.hxx  PoleZeroPlane.cxx  PoleZeroPlane.hxx  Selection.hxx  TODO  ToolTipButton.cxx  ToolTipButton.hxx  VERSION.hxx  alsaio.cxx  alsaio.cxx.old  arrow.xbm  config.h.in  jackio.cxx  main.cxx  main_alsa.cxx  (+7 more)
